--- a/pg-login.html
+++ b/pg-login.html
@@ -16,6 +16,9 @@
 <body>
     <!-- <div class="container"> -->
     <div class="login-card">
+        <!-- <div class="container"> -->
+            <img src="./assets/images/logo.png" alt="" style="width: 150px;">
+        <!-- </div> -->
         <h2>Login</h2>
         <h3>Enter your credentials</h3>
         <div class="login-form">
