--- a/pg-main.html
+++ b/pg-main.html
@@ -28,6 +28,7 @@
             <!-- navbar expanded when large  -->
             <div class="container-fluid">
                 <!-- Width 100% at all breakpoints for "container-fluid" -->
+                <img src="./assets/images/logo.png" alt="" style="width: 100px;">
                 <a class="navbar-brand" href="#">Procurement</a> <!-- navbar-brand used for nav heading -->
 
                 <!-- Navbar Toggle Button when screen is less than large -->
